# brightshard.dev

./: README.md  data.py  main.py  main.sync-conflict-20220303-184445-YQK53HB.py  pyproject.toml
files/: Cookie_Clicker++.user.js  volume.min.ps1  volume.ps1
pages/: 404.sync-conflict-20220303-184445-YQK53HB.html  blog.html  contact.html  home.html  projects.html
pages/blog/: hello-world.html
pages/projects/: brightbot-commands.html  brightbot.commands.html  brightbot.html  ccpp.html  digispark.html  hiddenhid.html  tricktroll.html
pages/shards/: blog-head.html  footer.html  head.html  project-head.html  settings.html  titlebar.html
pages/templates/: base.html  blog.html  project.html  redirect.html
static/: style.css
static/fonts/: Comfortaa.css  OpenSans.css
static/scripts/: functions.js
static/styles/: blog.css  gallery.css  style.css  style.sync-conflict-20220303-184445-YQK53HB.css
templates/: 404.html  base.html  basic.html  blog-base.html  blog.html  contact.html  home.html  nav.html  projects.html
templates/blog/: hello-world.html
templates/projects/: brightbot-commands.html  brightbot.html  ccpp.html  digispark.html
